--- a/okularApplication_v3d.desktop
+++ b/okularApplication_v3d.desktop
@@ -1,12 +1,14 @@
 [Desktop Entry]
-MimeType=text/x-vertdata;
+MimeType=text/x-v3d;
 Terminal=false
-Name=okular
+Name=Okular
 GenericName=Document Viewer
+Comment=Universal document viewer
 Exec=okular %U
 Icon=okular
 Type=Application
-InitialPreference=7
+InitialPreference=3
 Categories=Qt;KDE;Graphics;Viewer;
 NoDisplay=true
-X-KDE-Keywords=vertex
+X-KDE-Keywords=v3d
+X-KDE-AliasFor=org.kde.okular.desktop
