Removed headless renderer repo and integrated it into project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 remove_definitions(-DTRANSLATION_DOMAIN="okular")
 add_definitions(-DTRANSLATION_DOMAIN="okular_v3d" -DGLFW_INCLUDE_VULKAN -DVULKAN_DEBUG)
 
-include_directories("Headless-Vulkan-Renderer/src/" "Headless-Vulkan-Renderer/dependencies/" "/usr/include/tirpc")
+include_directories("src/Rendering" "src/" "src/V3dFile" "dependencies/" "/usr/include/tirpc")
 
 add_compile_options(-fexceptions)
 
 ########### next target ###############
-set(okularGenerator_v3d_SRCS src/v3d_generator.cpp Headless-Vulkan-Renderer/src/renderheadless.cpp Headless-Vulkan-Renderer/dependencies/VulkanTools.cpp src/V3dFile/V3dFile.cpp src/V3dFile/V3dObjects.cpp src/V3dFile/V3dObject.cpp src/V3dFile/V3dHeaderEntries.cpp)
+set(okularGenerator_v3d_SRCS src/v3d_generator.cpp src/Rendering/renderheadless.cpp dependencies/VulkanTools.cpp src/V3dFile/V3dFile.cpp src/V3dFile/V3dObjects.cpp src/V3dFile/V3dObject.cpp src/V3dFile/V3dHeaderEntries.cpp)
 
 okular_add_generator(okularGenerator_v3d ${okularGenerator_v3d_SRCS})
 
