--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Headless-Vulkan-Renderer"]
 	path = Headless-Vulkan-Renderer
 	url = git@github.com:Ben-Bingham/Headless-Vulkan-Renderer.git
+[submodule "3rdParty/V3D-Common"]
+	path = 3rdParty/V3D-Common
+	url = git@github.com:Ben-Bingham/V3D-Common.git
